English corrections in 'About me' section; Some mismatch corrections in skills

--- a/index.html
+++ b/index.html
@@ -959,20 +959,20 @@
     <div class="article-style" style="text-align: justify">
       <p>My name is Sudheer, I am a computational materials scientist with programming and data analysis skills.
 If I have to say about myself briefly, scoring full marks in mathematics (the only student in the entire city) during higher school made me not difficult to choose &ldquo;Mathematics&rdquo; and &ldquo;Physics&rdquo; as majors for my bachelore&rsquo;s degree.
-I have received bachelor&rsquo;s degree in science majored with &ldquo;Mathematics&rdquo; and &ldquo;Physics&rdquo; from Andhra University, India.
-The 25th rank that I obtained in the all India level entrance exam conducted to register for master&rsquo;s program in &ldquo;Physics&rdquo; allowed me to move Pondicherry University for master&rsquo;s.
+I have received my bachelor&rsquo;s degree in science from Andhra University, India.
+The 25th rank that I have obtained in the all India level entrance exam, which was conducted to register for master&rsquo;s program in &ldquo;Physics&rdquo;, allowed me to move Pondicherry University.
 I still remeber the feeling that I have got after writing the first computer code in one of my laboratory classes as part of the course work.
 I was so fascinated to see the capacity of computers to unravel the hidden beauty of physics.
-It was so motivated that I have chosen my thesis topic in &ldquo;Materials Science and Simulations&rdquo;.
+It motivated me so well that I have chosen my thesis topic in &ldquo;Materials Science and Simulations&rdquo;.
 From Pondicherry University, I have obtained master&rsquo;s degree in &ldquo;Physics&rdquo; with specialization in &ldquo;Condensed Matter Physics&rdquo;.
 However, I always felt that the time frame that I had during the thesis did not allow me to explore more of the topic.
-The desire made me to move Ruhr university Bochum for my second master&rsquo;s program, this time the full course is in &ldquo;Materials Science and Simulations&rdquo;.
+The desire made me to move Ruhr university Bochum for my second master&rsquo;s program, this time the full course was in &ldquo;Materials Science and Simulations&rdquo;.
 At Bochum, I had the opportunity to work on problems originated at different length scales (from atomistic to continuum scale) in various materials.
 With a solid foundation on the basics of materials science, I have registered for a doctoral degree at the University of Erlangen, and I am currently pursuing it.
 As part my doctoral thesis, I have been working on glass simulations, and I had the opportunity to gear up my coding skills to the next level.
 I have been a co-author for a scientific software called IMD, which is used for performing molecular dynamics simulations.
 Also, I have written several pieces of codes in python, C, C++, BASH, AWK, etc., to compute various structural, dynamical and mechanical properties of glasses by analysing the huge datasets that obtained with Quantum and Classical Molecular Dynamics Simulations.</p>
-<p>My interests include solving the challenging problems in science, especially in physics, to reveal the hidden beauty of nature.
+<p>My interests include solving challenging problems in science, especially in physics, to reveal the hidden beauty of nature, programming, data analysis, data visualization, and data science.
 Arithmatic and analytical thinking are my key strengths.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download <a href="/media/resume.pdf" target="_blank"> Resume</a></p>
@@ -1146,9 +1146,9 @@ Arithmatic and analytical thinking are my key strengths.</p>
     <div class="col-lg-2 col-sm-6 mb-4 mb-lg-0">
       <div class="position-relative py-1 shadow featurette-margin">
         <div class="skill-bar"></div>
-        <div class="progress-bar" style="width: 60%"></div>
+        <div class="progress-bar" style="width: 50%"></div>
         <h4>Fortran</h4>
-        <p>60%</p>
+        <p>50%</p>
       </div>
     </div>
 
@@ -1173,9 +1173,9 @@ Arithmatic and analytical thinking are my key strengths.</p>
     <div class="col-lg-2 col-sm-6 mb-4 mb-lg-0">
       <div class="position-relative py-1 shadow featurette-margin">
         <div class="skill-bar"></div>
-        <div class="progress-bar" style="width: 60%"></div>
+        <div class="progress-bar" style="width: 40%"></div>
         <h4>MPI Programming</h4>
-        <p>60%</p>
+        <p>40%</p>
       </div>
     </div>
   </div>
@@ -1206,7 +1206,7 @@ Arithmatic and analytical thinking are my key strengths.</p>
     <div class="col-lg-2 col-sm-6 mb-4 mb-lg-0">
       <div class="position-relative py-1 shadow featurette-margin">
         <div class="skill-bar"></div>
-        <div class="progress-bar" style="width: 70%"></div>
+        <div class="progress-bar" style="width: 60%"></div>
         <h4>Pandas</h4>
         <p>60%</p>
       </div>
@@ -1215,7 +1215,7 @@ Arithmatic and analytical thinking are my key strengths.</p>
     <div class="col-lg-2 col-sm-6 mb-4 mb-lg-0">
       <div class="position-relative py-1 shadow featurette-margin">
         <div class="skill-bar"></div>
-        <div class="progress-bar" style="width: 90%"></div>
+        <div class="progress-bar" style="width: 60%"></div>
         <h4>SciPy</h4>
         <p>60%</p>
       </div>
