--- a/index.html
+++ b/index.html
@@ -1156,6 +1156,15 @@ Currently, I am working with state-of-the-art machine learning algorithms to com
     <div class="col-lg-2 col-sm-6 mb-4 mb-lg-0">
       <div class="position-relative py-1 shadow featurette-margin">
         <div class="skill-bar"></div>
+        <div class="progress-bar" style="width: 50%"></div>
+        <h4>R</h4>
+        <p>50%</p>
+      </div>
+    </div>
+
+    <div class="col-lg-2 col-sm-6 mb-4 mb-lg-0">
+      <div class="position-relative py-1 shadow featurette-margin">
+        <div class="skill-bar"></div>
         <div class="progress-bar" style="width: 90%"></div>
         <h4>BASH Scripting</h4>
         <p>90%</p>
