updated about my journey

--- a/index.html
+++ b/index.html
@@ -957,20 +957,19 @@
     <h1>About my journey</h1>
 
     <div class="article-style" style="text-align: justify">
-      <p>My name is Sudheer, I am a computational materials science researcher and data scientist.
-I received my bachelor&rsquo;s degree in science majored with &ldquo;Mathematics&rdquo; and &ldquo;Physics&rdquo; from Andhra University, India.
-The 25th rank that I obtained in the all India level entrance exam, which was conducted to register for master&rsquo;s program in &ldquo;Physics&rdquo;, allowed me to move Pondicherry University.
-I was so fascinated to see the capacity of computers to unravel the hidden beauty of physics.
-It motivated me so well that I have chosen my thesis topic in &ldquo;Materials Science and Simulations&rdquo;.
-From Pondicherry University, I have obtained master&rsquo;s degree in &ldquo;Physics&rdquo; with specialization in &ldquo;Condensed Matter Physics&rdquo;.
-However, I always felt that the time frame that I had during the thesis did not allow me to explore more of the topic.
-The desire made me to move Ruhr university Bochum for my second master&rsquo;s program in &ldquo;Materials Science and Simulations&rdquo;.
-At Bochum, I had the opportunity to work on problems originated at different length scales (from atomistic to continuum scale) in various materials.
-With a solid foundation on the basics of materials science, I have registered for a doctoral degree at the University of Erlangen, and I am currently pursuing my PhD.
-As part my doctoral thesis, I have been working on glass simulations, and also had the opportunity to gear up my coding skills to the next level.
-I have been a co-author for a scientific software called IMD, which is used to perform molecular dynamics simulations.
-Also, I have written several pieces of codes in python, C, C++, BASH, AWK, etc., to compute various structural, dynamical, transport, and mechanical properties of glasses by analysing the huge datasets that obtained with Quantum and Classical Molecular Dynamics Simulations.
-Currently, I am working with state-of-the-art machine learning algorithms to compute parameters for the classical force fields by fitting the data obtained with ab-inito calculations.</p>
+      <p>My name is Sudheer, and I am a computational materials science researcher and data scientist.
+I received my bachelor’s degree in science with majors in “Mathematics” and “Physics” from Andhra University, India.
+The 25th rank obtained in the all-India level entrance exam to register for the master’s program in Physics allowed me to move to Pondicherry University.
+During the course work, I was so fascinated to see the capacity of computers unraveling the hidden beauty of physics.
+From Pondicherry University, I have obtained my master’s degree in “Physics” with a specialization in Condensed Matter Physics.
+However, I felt that the time frame during the thesis did not allow me to explore more of the topic.
+The desire made me move to Ruhr University Bochum for my second master’s program in Materials Science and Simulations.
+At Bochum, I had the opportunity to work on problems that originated at different length scales (from atomistic to continuum scale) in various materials.
+With a solid foundation in the basics of materials science, I have registered for a doctoral degree at the University of Erlangen, and I am currently pursuing my Ph.D.
+As part of my doctoral thesis, I have been working on glass simulations.
+I have been a co-author for a scientific software called IMD to perform molecular dynamics simulations.
+Also, I have developed several codes in python, C, C++, BASH, AWK, etc., to compute various structural, dynamical, transport, and mechanical properties of glasses by analyzing the datasets obtained with Quantum and Classical Molecular Dynamics Simulations.
+Currently, I am working with state-of-the-art machine learning algorithms to compute parameters for the classical force fields by fitting the data obtained with ab-into calculations.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download <a href="/media/resume.pdf" target="_blank"> Resume</a></p>
 
