--- a/index.html
+++ b/index.html
@@ -958,16 +958,15 @@
 
     <div class="article-style" style="text-align: justify">
       <p>My name is Sudheer, and I am a computational materials science researcher and data scientist.
-I received my bachelor’s degree in science with majors in “Mathematics” and “Physics” from Andhra University, India.
-The 25th rank obtained in the all-India level entrance exam to register for the master’s program in Physics allowed me to move to Pondicherry University.
+I received my bachelor’s degree in science with majors in Mathematics and Physics from Andhra University, India.
+Obtaining 25th rank in the all-India level entrance exam for registering in the master&rsquo;s program allowed me to move to Pondicherry University.
 During the course work, I was so fascinated to see the capacity of computers unraveling the hidden beauty of physics.
-From Pondicherry University, I have obtained my master’s degree in “Physics” with a specialization in Condensed Matter Physics.
+I obtained my master’s degree in Physics with a specialization in Condensed Matter Physics from Pondicherry University.
 However, I felt that the time frame during the thesis did not allow me to explore more of the topic.
 The desire made me move to Ruhr University Bochum for my second master’s program in Materials Science and Simulations.
 At Bochum, I had the opportunity to work on problems that originated at different length scales (from atomistic to continuum scale) in various materials.
-With a solid foundation in the basics of materials science, I have registered for a doctoral degree at the University of Erlangen, and I am currently pursuing my Ph.D.
-As part of my doctoral thesis, I have been working on glass simulations.
-I have been a co-author for a scientific software called IMD to perform molecular dynamics simulations.
+With a solid foundation in the basics of materials science, I have registered for a doctoral degree at the University of Erlangen, and I am currently pursuing my PhD.
+As part of my doctoral thesis, I have been working on glass simulations. I have been a co-author for a scientific software called IMD to perform molecular dynamics simulations.
 Also, I have developed several codes in python, C, C++, BASH, AWK, etc., to compute various structural, dynamical, transport, and mechanical properties of glasses by analyzing the datasets obtained with Quantum and Classical Molecular Dynamics Simulations.
 Currently, I am working with state-of-the-art machine learning algorithms to compute parameters for the classical force fields by fitting the data obtained with ab-into calculations.</p>
 <p>
