updated 'about my journey'

--- a/index.html
+++ b/index.html
@@ -961,6 +961,7 @@
 I received my bachelor’s degree in science with majors in Mathematics and Physics from Andhra University, India.
 Obtaining 25th rank in the all-India level entrance exam for registering in the master&rsquo;s program allowed me to move to Pondicherry University.
 During the course work, I was so fascinated to see the capacity of computers unraveling the hidden beauty of physics.
+With that motivation, I have done my thesis in Computational Materials Science.
 I obtained my master’s degree in Physics with a specialization in Condensed Matter Physics from Pondicherry University.
 However, I felt that the time frame during the thesis did not allow me to explore more of the topic.
 The desire made me move to Ruhr University Bochum for my second master’s program in Materials Science and Simulations.
